--- a/dev/tutorials/l_master.ipynb
+++ b/dev/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1532246f",
+   "id": "ac477ae1",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ff5fcc2",
+   "id": "b76c3839",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edbc0912",
+   "id": "c643272e",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba246b05",
+   "id": "93fcbeab",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4790c8c5",
+   "id": "422c17fa",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b61f2b62",
+   "id": "8bde3c25",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6b7f46f2",
+   "id": "170ee867",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:39.975322Z",
-     "iopub.status.busy": "2025-10-07T20:12:39.975166Z",
-     "iopub.status.idle": "2025-10-07T20:12:42.615656Z",
-     "shell.execute_reply": "2025-10-07T20:12:42.615103Z"
+     "iopub.execute_input": "2026-01-30T17:10:48.894099Z",
+     "iopub.status.busy": "2026-01-30T17:10:48.893845Z",
+     "iopub.status.idle": "2026-01-30T17:10:52.141488Z",
+     "shell.execute_reply": "2026-01-30T17:10:52.140284Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a78e646",
+   "id": "a4797ab4",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a5d0455",
+   "id": "e8a98ee6",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acd4b45e",
+   "id": "200e02ba",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b3e87c5",
+   "id": "5f6ffedf",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c35fb56",
+   "id": "b6a9ac30",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "386ffabe",
+   "id": "b2f1be7a",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4070120",
+   "id": "adf40e75",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce9da40f",
+   "id": "456b4540",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d0ba5215",
+   "id": "9e68ab92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:42.617766Z",
-     "iopub.status.busy": "2025-10-07T20:12:42.617481Z",
-     "iopub.status.idle": "2025-10-07T20:12:44.729112Z",
-     "shell.execute_reply": "2025-10-07T20:12:44.728560Z"
+     "iopub.execute_input": "2026-01-30T17:10:52.143815Z",
+     "iopub.status.busy": "2026-01-30T17:10:52.143404Z",
+     "iopub.status.idle": "2026-01-30T17:10:54.537386Z",
+     "shell.execute_reply": "2026-01-30T17:10:54.536470Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1122323d",
+   "id": "ec057bf6",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "61e4a928",
+   "id": "eb9cd637",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:44.730888Z",
-     "iopub.status.busy": "2025-10-07T20:12:44.730707Z",
-     "iopub.status.idle": "2025-10-07T20:12:44.734072Z",
-     "shell.execute_reply": "2025-10-07T20:12:44.733497Z"
+     "iopub.execute_input": "2026-01-30T17:10:54.539275Z",
+     "iopub.status.busy": "2026-01-30T17:10:54.539078Z",
+     "iopub.status.idle": "2026-01-30T17:10:54.543010Z",
+     "shell.execute_reply": "2026-01-30T17:10:54.541940Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d341eb7d",
+   "id": "6b02f0b8",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f433f93d",
+   "id": "5f765a59",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c970821",
+   "id": "61a1c24a",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5407b039",
+   "id": "d70621a1",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "65444b89",
+   "id": "9aa0f121",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:44.735757Z",
-     "iopub.status.busy": "2025-10-07T20:12:44.735557Z",
-     "iopub.status.idle": "2025-10-07T20:12:44.777375Z",
-     "shell.execute_reply": "2025-10-07T20:12:44.776799Z"
+     "iopub.execute_input": "2026-01-30T17:10:54.544831Z",
+     "iopub.status.busy": "2026-01-30T17:10:54.544650Z",
+     "iopub.status.idle": "2026-01-30T17:10:54.594583Z",
+     "shell.execute_reply": "2026-01-30T17:10:54.593640Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "862663c9",
+   "id": "ec669208",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "678ba792",
+   "id": "d6ac00a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:44.779182Z",
-     "iopub.status.busy": "2025-10-07T20:12:44.779010Z",
-     "iopub.status.idle": "2025-10-07T20:12:44.842935Z",
-     "shell.execute_reply": "2025-10-07T20:12:44.842409Z"
+     "iopub.execute_input": "2026-01-30T17:10:54.596319Z",
+     "iopub.status.busy": "2026-01-30T17:10:54.596139Z",
+     "iopub.status.idle": "2026-01-30T17:10:54.669998Z",
+     "shell.execute_reply": "2026-01-30T17:10:54.668943Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a398e0e7",
+   "id": "684355ea",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a9e3e1",
+   "id": "03f2e039",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1ea57e81",
+   "id": "3afab5a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:44.844716Z",
-     "iopub.status.busy": "2025-10-07T20:12:44.844520Z",
-     "iopub.status.idle": "2025-10-07T20:12:44.870325Z",
-     "shell.execute_reply": "2025-10-07T20:12:44.869731Z"
+     "iopub.execute_input": "2026-01-30T17:10:54.671809Z",
+     "iopub.status.busy": "2026-01-30T17:10:54.671632Z",
+     "iopub.status.idle": "2026-01-30T17:10:54.701752Z",
+     "shell.execute_reply": "2026-01-30T17:10:54.700785Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d1c030",
+   "id": "98deca90",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a488c48",
+   "id": "1c6c9d84",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f08878f",
+   "id": "64ab0431",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c937ff9c",
+   "id": "bcff0d85",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe6dba53",
+   "id": "01c69958",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8c40d810",
+   "id": "66155d6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:44.872215Z",
-     "iopub.status.busy": "2025-10-07T20:12:44.872036Z",
-     "iopub.status.idle": "2025-10-07T20:12:44.875959Z",
-     "shell.execute_reply": "2025-10-07T20:12:44.875379Z"
+     "iopub.execute_input": "2026-01-30T17:10:54.703630Z",
+     "iopub.status.busy": "2026-01-30T17:10:54.703452Z",
+     "iopub.status.idle": "2026-01-30T17:10:54.708259Z",
+     "shell.execute_reply": "2026-01-30T17:10:54.707090Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d10af4a",
+   "id": "8f1e6353",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "799ba4eb",
+   "id": "16ffad40",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:44.877709Z",
-     "iopub.status.busy": "2025-10-07T20:12:44.877517Z",
-     "iopub.status.idle": "2025-10-07T20:12:44.880291Z",
-     "shell.execute_reply": "2025-10-07T20:12:44.879813Z"
+     "iopub.execute_input": "2026-01-30T17:10:54.709895Z",
+     "iopub.status.busy": "2026-01-30T17:10:54.709724Z",
+     "iopub.status.idle": "2026-01-30T17:10:54.713002Z",
+     "shell.execute_reply": "2026-01-30T17:10:54.712040Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "224ba238",
+   "id": "e169450c",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e9004570",
+   "id": "86b1088a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:44.881821Z",
-     "iopub.status.busy": "2025-10-07T20:12:44.881659Z",
-     "iopub.status.idle": "2025-10-07T20:12:47.420424Z",
-     "shell.execute_reply": "2025-10-07T20:12:47.419829Z"
+     "iopub.execute_input": "2026-01-30T17:10:54.714601Z",
+     "iopub.status.busy": "2026-01-30T17:10:54.714416Z",
+     "iopub.status.idle": "2026-01-30T17:10:57.371995Z",
+     "shell.execute_reply": "2026-01-30T17:10:57.371058Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5e23d2d",
+   "id": "1f20caed",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2011edec",
+   "id": "06011100",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5b858e1",
+   "id": "326999fb",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a15ed4c7",
+   "id": "74b91d99",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5300637e",
+   "id": "a2be367a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:47.422309Z",
-     "iopub.status.busy": "2025-10-07T20:12:47.422124Z",
-     "iopub.status.idle": "2025-10-07T20:12:47.425564Z",
-     "shell.execute_reply": "2025-10-07T20:12:47.424942Z"
+     "iopub.execute_input": "2026-01-30T17:10:57.373865Z",
+     "iopub.status.busy": "2026-01-30T17:10:57.373667Z",
+     "iopub.status.idle": "2026-01-30T17:10:57.377578Z",
+     "shell.execute_reply": "2026-01-30T17:10:57.376687Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fd722fab9c0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f1f4d12bf60>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26f49563",
+   "id": "57a2aeea",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4e94e6c",
+   "id": "8baa003e",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1196f63c",
+   "id": "570315e3",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8de14886",
+   "id": "721e3a26",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "42a935eb",
+   "id": "624b2f56",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:47.427281Z",
-     "iopub.status.busy": "2025-10-07T20:12:47.427104Z",
-     "iopub.status.idle": "2025-10-07T20:12:47.429986Z",
-     "shell.execute_reply": "2025-10-07T20:12:47.429360Z"
+     "iopub.execute_input": "2026-01-30T17:10:57.379634Z",
+     "iopub.status.busy": "2026-01-30T17:10:57.379444Z",
+     "iopub.status.idle": "2026-01-30T17:10:57.382722Z",
+     "shell.execute_reply": "2026-01-30T17:10:57.381832Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "237821d0",
+   "id": "098e31e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-07T20:12:47.431488Z",
-     "iopub.status.busy": "2025-10-07T20:12:47.431316Z",
-     "iopub.status.idle": "2025-10-07T20:12:48.490125Z",
-     "shell.execute_reply": "2025-10-07T20:12:48.489549Z"
+     "iopub.execute_input": "2026-01-30T17:10:57.384722Z",
+     "iopub.status.busy": "2026-01-30T17:10:57.384537Z",
+     "iopub.status.idle": "2026-01-30T17:10:58.463202Z",
+     "shell.execute_reply": "2026-01-30T17:10:58.462089Z"
     }
    },
    "outputs": [
@@ -671,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
